<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".common.MainActivity">
    <!--<include layout="@layout/toolbar"/>-->
    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:background="#ececec"
        android:layout_height="1dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="-5dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/hometab_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <RadioButton
                android:id="@+id/rb_home"
                style="@style/RadioButtonBottomTab"
                android:drawableTop="@drawable/tab_0_back"
                android:checked="true"
                android:text="@string/app_home" />

            <RadioButton
                android:id="@+id/rb_find"
                style="@style/RadioButtonBottomTab"
                android:drawableTop="@drawable/tab_1_back"
                android:text="@string/app_find" />

            <RadioButton
                android:id="@+id/rb_message"
                style="@style/RadioButtonBottomTab"

                android:drawableTop="@drawable/tab_2_back"
                android:text="@string/app_message" />

            <RadioButton
                android:id="@+id/rb_order"
                style="@style/RadioButtonBottomTab"
                android:drawableTop="@drawable/tab_3_back"
                android:text="@string/app_order" />
            <RadioButton
                android:id="@+id/rb_me"
                style="@style/RadioButtonBottomTab"
                android:drawableTop="@drawable/tab_4_back"
                android:text="@string/app_me" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>
